# adventofcode2015

./: .gitignore  LICENSE
1/: floor.hs  floor2.hs
10/: Main.hs
11/: Main.hs  Password.hs  Spec.hs  x11.cabal
12/: Abacus.hs  Main.hs  Spec.hs  x12.cabal
13/: Main.hs  Seating.hs  Spec.hs  x13.cabal
14/: Flight.hs  Main.hs  Spec.hs  x14.cabal
15/: x15.cabal
15/app/: Main.hs
15/src/: Cookie.hs
15/test/: CookieSpec.hs
16/: x16.cabal
16/app/: Main.hs
16/src/: ForensicParser.hs  Forensics.hs
16/test/: ForensicsSpec.hs
17/: x17.cabal
17/app/: Main.hs
17/src/: Combine.hs
17/test/: CombineSpec.hs
18/: x18.cabal
18/app/: Main.hs
18/src/: Life.hs
18/test/: LifeSpec.hs
19/: x19.cabal
19/app/: Main.hs
19/src/: Medicine.hs
19/src/Medicine/: Parser.hs
19/test/: MedicineSpec.hs
19/test/Medicine/: ParserSpec.hs
2/: Present.hs  Ribbon.hs  Wrap.hs  wrap.cabal
20/: stack.yaml
20/app/: Main.hs
21/: x21.cabal
21/app/: Main.hs
21/src/: RPG.hs
21/src/RPG/: Shop.hs
21/test/: RPGSpec.hs
22/: stack.yaml  x22.cabal
22/app/: Main.hs
22/src/: RPG.hs
22/src/RPG/: Spell.hs
22/test/: RPGSpec.hs
23/: x23.cabal
23/app/: Main.hs
23/src/: Processor.hs
23/src/Processor/: Parser.hs
23/test/: ProcessorSpec.hs
23/test/Processor/: ParserSpec.hs
24/: x24.cabal
24/app/: Main.hs
24/src/: Quantum.hs
24/test/: QuantumSpec.hs
25/: x25.cabal
25/app/: Main.hs
25/src/: Diagonal.hs
25/test/: DiagonalSpec.hs
3/: Grid.hs  RoboGrid.hs
4/: Hash.hs  x4.cabal
5/: Nice.hs  Nice2.hs  x5.cabal
6/: Instructions.hs  Lights.hs  Main.hs  Main2.hs  x6.cabal
6/scala/: .cache-main  build.sbt
6/scala/project/: build.properties
6/scala/src/main/scala/: InstructionsParser.scala  Lights.scala
6/scala/src/test/scala/: HelloSpec.scala  InstructionsParserSpec.scala
7/: Circuit.hs  Main.hs  Solve.hs  Spec.hs  x7.cabal
8/: Escapes.hs  LICENSE  Strings.hs  x8.cabal
9/: Distances.hs  Main.hs  x9.cabal
x20/: x20.cabal
x20/src/: Gifts.hs
x20/test/: GiftsSpec.hs
